--- a/contexte.html
+++ b/contexte.html
@@ -20,74 +20,127 @@
     </header>
 
     <main>
-      <section class="agence">
-        <h2>Espace.digital</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id purus
-          urna. Integer volutpat aliquam ligula sit amet accumsan. Suspendisse
-          potenti. Nam libero erat, sagittis vitae semper quis,
-        </p>
-        <div class="list-card">
+      <section class="hero">
+        <h1>CONTEXTE</h1>
+      </section>
+      <section>
+        <h2>Agence</h2>
+        <div class="agence">
+          <p>
+            <a href="https://espace.digital/" target="_blank">espace.digital</a>
+            est une agence spécialisée dans le développement de solutions
+            digitales sur mesure. Elle accompagne différents clients dans la
+            création et l'évolution de leurs projets web.
+          </p>
+          <img
+            class="card"
+            src="img/espace.digital.png"
+            alt="homepage de espace.digital"
+          />
+        </div>
+      </section>
+
+      <section class="encadrant-section">
+        <div class="encadrant">
+          <img src="img/jonas-dumas.jpeg" alt="photo de Jonas Dumas" />
           <div>
-            <div>
-              <p><span>icon : </span>espace.digital</p>
-              <p>Agence</p>
+            <h3>Encadrant du stage</h3>
+            <p class="encadrant-name">Jonas Dumas</p>
+            <ul>
+              <li>Consultant en communication et Formateur</li>
+              <li>Fondateur et consultant senior d'espace.digital</li>
+            </ul>
+            <div class="social-media-list">
+              <a href="https://www.linkedin.com/in/jonas-dumas/">linkedin</a>
             </div>
-            <div>
-              <p><span>icon : </span>Lieu</p>
-              <p>adresse</p>
-            </div>
-            <div>
-              <p><span>icon : </span>Encadrant</p>
-              <ul>
-                <li>Jonas Dumas</li>
-                <li>Web developeur, formateur</li>
-                <li>linkedin : url du linkedin</li>
-              </ul>
-            </div>
-          </div>
-          <div>
-            <p>insérer image</p>
           </div>
         </div>
       </section>
 
       <section>
-        <h2>Stage</h2>
-        <p>Rôle : Développeur web (stagiaire)</p>
-        <p>Durée : 7 mois (juillet 2025 - janvier 2026)</p>
-        <p>Lieu : 99% télétravail (rapport & discussion journaliers)</p>
-        <p>Responsablités :</p>
-        <ul>
-          <li>Réorganisation du repo GitHub</li>
-          <li>Corrections de bug</li>
-          <li>Ajout de fonctionnalités</li>
-          <li>Refonte</li>
-        </ul>
-        <button href="travaux.html">Voir projets -></button>
-        <div>
-          <h3>Méthodes & outils</h3>
-          <p><strong>Stack : </strong>liste d'icon....</p>
-          <p><strong>Gestion : </strong>liste d'icon....</p>
-          <p><strong>Communication : </strong>liste d'icon....</p>
+        <h2>Contexte du stage</h2>
+        <div class="list-card-context">
+          <div class="card card-context">
+            <strong>Durée</strong>
+            <p>7 mois</p>
+          </div>
+          <div class="card card-context">
+            <strong>Lieu de travail</strong>
+            <p>95% télétravail</p>
+          </div>
+          <div class="card card-context">
+            <strong>Rôle</strong>
+            <p>Développeur web (stagiaire)</p>
+          </div>
+          <div class="card card-context">
+            <strong>Type de mission</strong>
+            <p>Bugfix<br />Fonctionnalités<br />Refonte</p>
+          </div>
+          <div class="card card-context">
+            <strong>Outils & stacks</strong>
+            <div class="list-logo">
+              <img src="img/stack/Laravel-Logo.wine.svg" alt="laravel" />
+              <img src="img/stack/Vue.js_Logo.png" alt="vue.js" />
+              <img src="img/stack/php-icons.png" alt="php" />
+              <img src="img/stack/bash-git-icons.jpg" alt="bash" />
+              <img src="img/stack/github-logo.png" alt="github" />
+              <img src="img/stack/wordpress-logo.png" alt="wordpress" />
+            </div>
+          </div>
+          <div class="card card-context">
+            <strong>Communication</strong>
+            <div class="list-logo">
+              <img src="img/stack/slack-logo.png" alt="slack" />
+              <img src="img/stack/asana-logo.jpg" alt="asana" />
+            </div>
+          </div>
         </div>
+        <a class="secondary-button" href="travaux.html">Découvrir travaux</a>
       </section>
 
-      <section>
+      <section class="objectives">
         <h2>Objectifs & attentes</h2>
-        <h3>Avant le stage</h3>
-        <ul>
-          <li>Mieux comprendre le travail professionnel</li>
-          <li>Nouveaux skills et/ou compétences</li>
-          <li>Améliorer mes pratiques</li>
-        </ul>
-        <h3>Pendant le stage</h3>
+        <div class="objectives-grid">
+          <div class="card">
+            <h3>Avant</h3>
+            <ul>
+              <li>Mieux comprendre le travail professionnel</li>
+              <li>Nouveaux skills et/ou compétences</li>
+              <li>Améliorer mes pratiques</li>
+              <li>Première expérience pro</li>
+            </ul>
+          </div>
+          <div class="first-cell">
+            <p>
+              Ce stage a été ma première expérience professionnelle et une
+              immersion concrète dans le monde du développement web
+              professionnel. J'espérais pouvoir me rendre compte des contraintes
+              et apprendre au côté d'un dev senior.
+            </p>
+          </div>
+          <div class="card">
+            <h3>Pendant</h3>
+            <ul>
+              <li>Nouveaux langages</li>
+              <li>Conseils sur la structuration.design, etc</li>
+              <li>Contraintes liés au pro</li>
+            </ul>
+          </div>
+          <div>
+            <p>
+              J'ai pu travailler sur des projets concrets avec des contraintes
+              professionnelles. J'ai reçu de nombreux conseils même si beaucoup
+              de travail c'est fait en autonomie.
+            </p>
+            <a class="main-button" href="bilan.html">Voir bilan</a>
+          </div>
+        </div>
       </section>
     </main>
 
     <footer>
       <p>© Noémie FERTIG - Rapport de stage - janvier 2026</p>
-      <p>Contact : <a href="#">noemie.fertig@crea-inseec.com</a></p>
+      <p>Contact : noemie.fertig@crea-inseec.com</p>
     </footer>
   </body>
 </html>
