--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <p>4 projets</p>
             </div>
             <div class="card card-hero">
-              <strong>Type de mission</strong>
+              <strong>Type de missions</strong>
               <p>Bugfix<br />Fonctionnalités<br />Refonte</p>
             </div>
           </div>
@@ -47,27 +47,33 @@
 
       <section class="intro">
         <h2>À propos</h2>
-        <p>
+        <p class="intro-text">
           Ce site a été créer dans l'objectif de raconter mon stage de 7 mois en
           agence, dans le cadre du bachelor CREA omnes.et analyser les
           compétences techniques & professionnelles développées.
         </p>
         <div class="num-list">
           <div class="num-list-element">
-            <div class="num-list-number">1.</div>
-            <strong>Contexte</strong>
+            <div class="num-list-title">
+              <div class="num-list-number">1</div>
+              <strong>Contexte</strong>
+            </div>
             <p>Présentation de l'agence, objectifs, cadre de travail.</p>
             <a class="secondary-button" href="contexte.html">Aller voir</a>
           </div>
           <div class="num-list-element">
-            <div class="num-list-number">2.</div>
-            <strong>Travaux</strong>
+            <div class="num-list-title">
+              <div class="num-list-number">2</div>
+              <strong>Travaux</strong>
+            </div>
             <p>4 projets : missions, problèmes, solutions, apprentissages.</p>
             <a class="secondary-button" href="travaux.html">Aller voir</a>
           </div>
           <div class="num-list-element">
-            <div class="num-list-number">3.</div>
-            <strong>Bilan</strong>
+            <div class="num-list-title">
+              <div class="num-list-number">3</div>
+              <strong>Bilan</strong>
+            </div>
             <p>Compétences, recul critique, impact sur le projet pro.</p>
             <a class="secondary-button" href="bilan.html">Aller voir</a>
           </div>
@@ -76,28 +82,30 @@
 
       <section class="resume">
         <img src="img/img-ordinateur.png" alt="ordinateur sur un bureau" />
-        <h2>Travaux</h2>
+        <h2>Découvrir les projets</h2>
         <p>
-          Raconter mon stage de 7 mois en agence, dans le cadre du bachelor CREA
-          omnes, et analyser les compétences techniques & professionnelles
-          développées.
+          Au cours de mes 7 mois de stage, j'ai eu l'opportunité de travailler
+          sur plusieurs projets à difficultés grandissantes et stacks variés. La
+          plupart ont été terminé à l'exception de la refonte d'<span
+            >Association découvrir</span
+          >.
         </p>
         <div class="list-card-resume">
           <div class="card card-resume">
             <strong>Fstats</strong>
-            <p>Juillet 2025 - Janvier 2026</p>
+            <p>Juillet</p>
           </div>
           <div class="card card-resume">
             <strong>Sostats</strong>
-            <p>espace.digital</p>
+            <p>Septembre-Janvier</p>
           </div>
           <div class="card card-resume">
             <strong>Labostats</strong>
-            <p>4 projets</p>
+            <p>Octobre-janvier</p>
           </div>
           <div class="card card-resume">
             <strong>Découvrir</strong>
-            <p>Bugfix<br />Fonctionnalités<br />Refonte</p>
+            <p>Décembre</p>
           </div>
         </div>
       </section>
@@ -105,7 +113,7 @@
 
     <footer>
       <p>© Noémie FERTIG - Rapport de stage - janvier 2026</p>
-      <p>Contact : <a href="#">noemie.fertig@crea-inseec.com</a></p>
+      <p>Contact : noemie.fertig@crea-inseec.com</p>
     </footer>
   </body>
 </html>
