--- a/bilan.html
+++ b/bilan.html
@@ -19,11 +19,101 @@
       </nav>
     </header>
 
-    <main></main>
+    <main>
+      <section class="hero">
+        <h1>BILAN</h1>
+      </section>
+      <section>
+        <div class="pro-cons">
+          <div>
+            <h2>Analyse</h2>
+            <p>
+              Analyse critique de mon évolution : compétences, méthodes, posture
+              professionnelle, et impact sur mon projet de carrière.
+            </p>
+          </div>
+
+          <div class="num-list">
+            <div class="num-list-element">
+              <div class="num-list-title">
+                <div class="num-list-number">
+                  <img src="img/feuille-de-trefle.png" />
+                </div>
+                <strong>Points chanceux</strong>
+              </div>
+              <ul>
+                <li>Progression graduelle de la difficultés des tâches</li>
+                <li>Pas trop de deadlines</li>
+                <li>Projets variés</li>
+              </ul>
+            </div>
+            <div class="num-list-element">
+              <div class="num-list-title">
+                <div class="num-list-number">
+                  <p></p>
+                </div>
+                <strong>Points ayant pu être améliorer</strong>
+              </div>
+              <ul>
+                <li>Moins de télétravail</li>
+                <li>Moins besoin d'aide de l'IA</li>
+                <li>Consacrer plus de temps pour ce rapport</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="skills">
+        <div>
+          <strong>Hardskills</strong>
+          <div class="list-skills">
+            <p>Laravel</p>
+            <p>Vue.js</p>
+            <p>Github</p>
+            <p>Wordpress</p>
+            <p>Migrations</p>
+            <p>Slack + Asana</p>
+          </div>
+        </div>
+        <div>
+          <strong>Softskills</strong>
+          <div class="list-skills">
+            <p>Rigueur</p>
+            <p>Professionnalisme</p>
+            <p>Autonomie</p>
+            <p>Organisation</p>
+            <p>Prise de notes</p>
+            <p>Calcul des heures</p>
+          </div>
+        </div>
+        <div class="before-after card">
+          <h3>Attentes</h3>
+          <ul>
+            <li>
+              <p>Fullstack -></p>
+              <img src="img/coche.png" />
+            </li>
+            <li>
+              <p>1ère expérience pro -></p>
+              <img src="img/coche.png" />
+              <p>(Jusqu'en prod !)</p>
+            </li>
+            <li>
+              <p>Nouveaux skills -></p>
+              <img src="img/coche.png" />
+            </li>
+            <li>
+              <p>Travail en agence -> Très peu</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
 
     <footer>
       <p>© Noémie FERTIG - Rapport de stage - janvier 2026</p>
-      <p>Contact : <a href="#">noemie.fertig@crea-inseec.com</a></p>
+      <p>Contact : noemie.fertig@crea-inseec.com</p>
     </footer>
   </body>
 </html>
