--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <body>
     <header>
       <div>Rapport de stage</div>
-      <nav>
+      <input type="checkbox" id="burger-toggle" />
+      <label for="burger-toggle" class="burger"> ☰ </label>
+
+      <nav class="main-nav">
         <a href="index.html" class="active-nav-link">Accueil</a>
         <a href="contexte.html">Contexte</a>
         <a href="travaux.html">Travaux</a>
@@ -105,7 +108,7 @@
           </div>
           <div class="card card-resume">
             <strong>Découvrir</strong>
-            <p>Décembre</p>
+            <p>Novembre-janvier</p>
           </div>
         </div>
       </section>
