--- a/travaux.html
+++ b/travaux.html
@@ -11,7 +11,9 @@
   <body>
     <header>
       <div>Rapport de stage</div>
-      <nav>
+      <input type="checkbox" id="burger-toggle" />
+      <label for="burger-toggle" class="burger"> ☰ </label>
+      <nav class="main-nav">
         <a href="index.html">Accueil</a>
         <a href="contexte.html">Contexte</a>
         <a href="travaux.html" class="active-nav-link">Travaux</a>
@@ -20,9 +22,6 @@
     </header>
 
     <main>
-      <section class="hero">
-        <h1>TRAVAUX</h1>
-      </section>
       <section class="dataconsult">
         <h2>DATACONSULT</h2>
         <p>
