--- a/contexte.html
+++ b/contexte.html
@@ -11,7 +11,9 @@
   <body>
     <header>
       <div>Rapport de stage</div>
-      <nav>
+      <input type="checkbox" id="burger-toggle" />
+      <label for="burger-toggle" class="burger"> ☰ </label>
+      <nav class="main-nav">
         <a href="index.html">Accueil</a>
         <a href="contexte.html" class="active-nav-link">Contexte</a>
         <a href="travaux.html">Travaux</a>
@@ -20,9 +22,6 @@
     </header>
 
     <main>
-      <section class="hero">
-        <h1>CONTEXTE</h1>
-      </section>
       <section>
         <h2>Agence</h2>
         <div class="agence">
@@ -51,7 +50,9 @@
               <li>Fondateur et consultant senior d'espace.digital</li>
             </ul>
             <div class="social-media-list">
-              <a href="https://www.linkedin.com/in/jonas-dumas/">linkedin</a>
+              <a href="https://www.linkedin.com/in/jonas-dumas/"
+                ><img src="img/linkedin.png" alt="linkedin"
+              /></a>
             </div>
           </div>
         </div>
