--- a/bilan.html
+++ b/bilan.html
@@ -28,7 +28,7 @@
             <h2>Analyse</h2>
             <p>
               Analyse critique de mon évolution : compétences, méthodes, posture
-              professionnelle, et impact sur mon projet de carrière.
+              professionnelle et impact sur mon projet de carrière.
             </p>
           </div>
 
@@ -39,7 +39,7 @@
                 <strong>Points chanceux</strong>
               </div>
               <ul>
-                <li>Progression graduelle de la difficultés des tâches</li>
+                <li>Progression graduelle de la difficulté des tâches</li>
                 <li>Pas trop de deadlines</li>
                 <li>Projets variés</li>
               </ul>
@@ -53,8 +53,7 @@
               </div>
               <ul>
                 <li>Moins de télétravail</li>
-                <li>Moins besoin d'aide de l'IA</li>
-                <li>Consacrer plus de temps en avance pour ce rapport</li>
+                <li>Consacrer plus de temps en amont pour ce rapport</li>
               </ul>
             </div>
           </div>
@@ -63,12 +62,12 @@
 
       <section class="skills">
         <div class="skills-block">
-          <strong>Hardskills</strong>
+          <strong>Hard skills</strong>
           <div class="list-skills">
             <p>Laravel</p>
             <p>Vue.js</p>
-            <p>Github</p>
-            <p>Wordpress</p>
+            <p>GitHub</p>
+            <p>WordPress</p>
             <p>Migrations</p>
             <p>Slack + Asana</p>
           </div>
@@ -123,7 +122,7 @@
     </main>
 
     <footer>
-      <p>© Noémie FERTIG - Rapport de stage - janvier 2026</p>
+      <p>© Noémie FERTIG - Rapport de stage - Janvier 2026</p>
       <p>Contact : noemie.fertig@crea-inseec.com</p>
     </footer>
   </body>
