--- a/contexte.html
+++ b/contexte.html
@@ -131,7 +131,7 @@
             <p>
               J'ai pu travailler sur des projets concrets avec des contraintes
               professionnelles. J'ai reçu de nombreux conseils même si beaucoup
-              de travail c'est fait en autonomie.
+              de travail s'est fait en autonomie.
             </p>
             <a class="main-button" href="bilan.html">Voir bilan</a>
           </div>
@@ -140,7 +140,7 @@
     </main>
 
     <footer>
-      <p>© Noémie FERTIG - Rapport de stage - janvier 2026</p>
+      <p>© Noémie FERTIG - Rapport de stage - Janvier 2026</p>
       <p>Contact : noemie.fertig@crea-inseec.com</p>
     </footer>
   </body>
