--- a/travaux.html
+++ b/travaux.html
@@ -25,11 +25,11 @@
       <section class="dataconsult">
         <h2>DATACONSULT</h2>
         <p>
-          Dataconsult est une groupe de projets ayant consitué la majorité de
-          mon stage. Diviser en trois sous-projets, chacun à la destination d'un
-          client différent. Il s'agit d'un site servant à des associations
+          Dataconsult est un groupe de projets ayant constitué la majorité de
+          mon stage. Divisé en trois sous-projets, chacun à destination d'un
+          client différent. Il s'agit d'un site permettant à des associations
           d'enregistrer leurs consultations annuelles et d'afficher
-          automatiquement des stats.
+          automatiquement des statistiques.
         </p>
         <!--test 1-->
         <div class="accordion card">
@@ -63,7 +63,7 @@
                 <p class="project-context">
                   Fstats a été le premier projet du stage, créé pour
                   l'association F-information il y a 5 ans. La mission de
-                  stagiaire était de compléter une fonctionnalités de relevé
+                  stagiaire était de compléter une fonctionnalité de relevé
                   d'heures, corriger certains bugs et me familiariser avec le
                   projet.
                 </p>
@@ -87,8 +87,8 @@
                   </div>
                   <ul>
                     <li>Introduction au projet</li>
-                    <li>Découverte de laravel et vue.js</li>
-                    <li>Ancienne version de php</li>
+                    <li>Découverte de Laravel et Vue.js</li>
+                    <li>Ancienne version de PHP</li>
                   </ul>
                 </div>
               </div>
@@ -129,10 +129,10 @@
               <div class="project-data">
                 <strong>Contexte</strong>
                 <p class="project-context">
-                  Les projets de DataConsult était auparavant dans des dossiers
-                  séparer. La mission était de tous les réunir et les
+                  Les projets de DataConsult étaient auparavant dans des
+                  dossiers séparés. La mission était de tous les réunir et les
                   réorganiser dans un repo unique. Des scripts de déploiements
-                  pour les serveurs devs et prod devaient aussi être créer.
+                  pour les serveurs devs et prod devaient aussi être créés.
                 </p>
               </div>
               <div class="num-list">
@@ -155,7 +155,7 @@
                   <ul>
                     <li>Gérer les codebases différents des projets</li>
                     <li>Créer un script fonctionnel</li>
-                    <li>Synchroniser tout les scripts</li>
+                    <li>Synchroniser tous les scripts</li>
                   </ul>
                 </div>
               </div>
@@ -196,7 +196,7 @@
                 <strong>Contexte</strong>
                 <p class="project-context">
                   Sostats, parti de la base de fstats, est une version du projet
-                  ré-adapté pour l'association Sos-femmes. La mission consistait
+                  réadapté pour l'association Sos-femmes. La mission consistait
                   à corriger les bugs majeurs se trouvant dans la partie
                   centrale des stats et retravailler les filtres.
                 </p>
@@ -337,7 +337,7 @@
               <div class="project-data">
                 <strong>Contexte</strong>
                 <p class="project-context">
-                  Après une années d'utilisation, le client demande la création
+                  Après une année d'utilisation, le client demande la création
                   d'une seconde version du site (après 2026) avec des
                   formulaires simplifiés et un changement de structure pour
                   plusieurs données.
@@ -439,7 +439,7 @@
                     <strong>Difficultés</strong>
                   </div>
                   <ul>
-                    <li>Introduction à Elementor pro, dynamic.ooo et ACF</li>
+                    <li>Introduction à Elementor Pro, Dynamic.ooo et ACF</li>
                     <li>Maquettes changeant de jour en jour</li>
                     <li>
                       Gestion des blancs et changement de détails du design
@@ -464,7 +464,7 @@
     </main>
 
     <footer>
-      <p>© Noémie FERTIG - Rapport de stage - janvier 2026</p>
+      <p>© Noémie FERTIG - Rapport de stage - Janvier 2026</p>
       <p>Contact : noemie.fertig@crea-inseec.com</p>
     </footer>
     <script src="./js/travaux.js"></script>
