--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       <section class="intro">
         <h2>À propos</h2>
         <p class="intro-text">
-          Ce site a été créer dans l'objectif de raconter mon stage de 7 mois en
-          agence, dans le cadre du bachelor CREA omnes.et analyser les
+          Ce site a été créé dans l'objectif de raconter mon stage de 7 mois en
+          agence, dans le cadre du bachelor CREA Omnes, et analyser les
           compétences techniques & professionnelles développées.
         </p>
         <div class="num-list">
@@ -77,7 +77,9 @@
               <div class="num-list-number">3</div>
               <strong>Bilan</strong>
             </div>
-            <p>Compétences, recul critique, impact sur le projet pro.</p>
+            <p>
+              Compétences, recul critique, impact sur le projet professionnel
+            </p>
             <a class="secondary-button" href="bilan.html">Aller voir</a>
           </div>
         </div>
@@ -88,9 +90,9 @@
         <h2>Découvrir les projets</h2>
         <p>
           Au cours de mes 7 mois de stage, j'ai eu l'opportunité de travailler
-          sur plusieurs projets à difficultés grandissantes et stacks variés. La
-          plupart ont été terminé à l'exception de la refonte d'<span
-            >Association découvrir</span
+          sur plusieurs projets aux difficultés grandissantes et stacks variés.
+          La plupart ont été terminés à l'exception de la refonte d'<span
+            >Association Découvrir</span
           >.
         </p>
         <div class="list-card-resume">
@@ -100,22 +102,22 @@
           </div>
           <div class="card card-resume">
             <strong>Sostats</strong>
-            <p>Septembre-Janvier</p>
+            <p>Septembre - Janvier</p>
           </div>
           <div class="card card-resume">
             <strong>Labostats</strong>
-            <p>Octobre-janvier</p>
+            <p>Octobre - janvier</p>
           </div>
           <div class="card card-resume">
             <strong>Découvrir</strong>
-            <p>Novembre-janvier</p>
+            <p>Novembre - janvier</p>
           </div>
         </div>
       </section>
     </main>
 
     <footer>
-      <p>© Noémie FERTIG - Rapport de stage - janvier 2026</p>
+      <p>© Noémie FERTIG - Rapport de stage - Janvier 2026</p>
       <p>Contact : noemie.fertig@crea-inseec.com</p>
     </footer>
   </body>
